--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>
         <%= title %>
     </title>
@@ -12,20 +14,18 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 py-2">
         <div class="container-fluid">
-          <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+          <a class="navbar-brand" href="#">
+            <img src="/assets/logo.png" alt="Logo" class="logo"/>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent" >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 container-fluid d-flex justify-content-center" id="linkSection">
                 <% categories.forEach(category=>{%>
-                    <li class="nav-item mx-4">
-                        <a class="nav-link <%= title.includes(category.name) && 'active'%>" href="/categoria/<%= category.name%>">
-                            <%= category.name.toUpperCase()%>
-                        </a>
-                    </li>
+                  <%- include('./navlink.ejs', {category})%>
                 <%})%>
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
