--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
 <%- include('./partials/header.ejs') %>
-    <!-- <% categories.forEach(category=>{%>
-        <%- include('./category.ejs', {hola: category.name})%>
-    <%})%> -->
 
+<%- include('./partials/footer.ejs') %>
