--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,7 @@
 <%- include('./partials/header.ejs') %>
+    <div class="container-fluid">
+        <input type="text" name="search" id="search" placeholder="Buscar productos...">
+        <input type="submit" value="Buscar">
+    </div>
 
 <%- include('./partials/footer.ejs') %>
