--- a/views/partials/navlink.ejs
+++ b/views/partials/navlink.ejs
@@ -1,5 +1,5 @@
 <li class="nav-item mx-4">
-    <a class="nav-link <%= title.includes(category.name) && 'active'%>" href="/category/<%= category.id%>">
-        <%= category.name.toUpperCase()%>
+    <a class="nav-link <%= cat.name===category && 'activeLink'%>" href="/category/<%= cat.id%>">
+        <%= cat.name.toUpperCase()%>
     </a>
 </li>
