--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,4 @@
 <%- include('./partials/header.ejs') %>
-    <div class="container-fluid">
-        <form action="/search-products" method="GET">
-            <input type="text" name="search" id="search" placeholder="Buscar productos...">
-            <input type="submit" value="Buscar">
-        </form>
-    </div>
+<main></main>
 
 <%- include('./partials/footer.ejs') %>
