--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,33 +1,27 @@
 <%- include('./partials/header.ejs') %>
+<main>
 <div class="container-fluid">
-    <h2 class="text-center my-5">Productos de la categoría <%= category.toUpperCase()%> (<%= products.length%>)</h2>
+    <h2 class="text-center my-5">
+        <%if(searching && products.length){%>
+            Resultados para "<%= searched%>": (<%= products.length%>)
+        <%}else if(!searching){%>
+            Productos de la categoría <%= category.toUpperCase()%> (<%= products.length%>)
+        <%}%>
+    </h2>
 </div>
 <div class="container-fluid d-flex justify-content-center flex-wrap">
-    <%products.forEach(product=>{%>
-        <div class="card col-xxl-4 m-4" style="width: 18rem;">
-            <div style="background-image: url('<%= product.url_image ? product.url_image : `/assets/no-image.jpg`%>');" class="productImage">
-                <%if(product.discount>0){%>
-                    <span class="badge bg-danger discCircle"><%=product.discount%>%</span>
-                    <%}%>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title text-center productName"><%= product.name%></h5>
-              <hr />
-              <div class="d-flex justify-content-between">
-                  
-                  <%if(product.discount>0){%>
-                    <p class="card-text <%=product.discount>0 && 'discount'%>"><%= product.price%></p>
-                    <%}%>
-                    <p class="card-text finalPrice"><%= product.finalPrice%></p>
-
-                <a href="#" class="btn btn-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
-                        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
-                    </svg>
-                </a>
-              </div>
-            </div>
+    <%if(products.length){%>
+        <%products.forEach(product=>{%>
+            <%-include('./partials/productCard.ejs', {product})%>
+    <%})}else{%>
+        <div class="d-flex flex-column justify-content-center align-items-center messageContainer">
+            <img src="/assets/not-found.png" alt="Not found image">
+            <h2 class="text-center">Lo sentimos</h2>
+            <h3 class="text-center">No hay productos que coincidan con "<%= searched%>"</h3>
+            <h3 class="text-center">Intente con otro término</h3>
+            <button class="searchButton py-2 mt-3"><i class="fas fa-home"></i> Ir a Inicio</button>
         </div>
-    <%})%>
+        <%}%>
 </div>
+</main>
 <%- include('./partials/footer.ejs') %>
