--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,13 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/styles.css">
+    <!-- FONTAWESOME -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <title>
         <%= title %>
     </title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light px-4 py-2">
+    <nav class="navbar navbar-expand-lg navbar-light px-4 py-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img src="/assets/logo.png" alt="Logo" class="logo"/>
@@ -29,8 +31,12 @@
                 <%})%>
             </ul>
           </div>
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="whitesmoke" class="bi bi-basket-fill" viewBox="0 0 16 16">
-            <path d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717L5.07 1.243zM3.5 10.5a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3z"/>
-          </svg>
+          <i class="fas fa-shopping-basket"></i>
         </div>
     </nav>
+    <div class="container-fluid searcherSection py-3">
+      <form action="/search-products" method="GET" class="container-fluid d-flex justify-content-center">
+          <input class="me-4 searchInput" type="text" name="search" id="search" placeholder="Buscar productos...">
+          <input class="searchButton" type="submit" value="Buscar">
+      </form>
+    </div>
