--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,12 @@
                 <%})%>
             </ul>
           </div>
-          <i class="fas fa-shopping-basket"></i>
+          <i class="fas fa-shopping-basket cartIcon" id="cart"></i>
+          <div id="cartSection" class="cartList hide d-flex flex-column align-items-center p-3">
+            <i class="fas fa-times-circle align-self-start" id="close"></i>
+            <h3>Carrito</h3>
+            <div id="productList"></div>
+          </div>
         </div>
     </nav>
     <div class="container-fluid searcherSection py-3">
