--- a/public/styles.css
+++ b/public/styles.css
@@ -96,6 +96,44 @@ nav li > a:hover {
   display: none !important;
 }
 
+.clearButton,
+.finishButton {
+  border: none;
+  border-radius: 4px;
+  padding: 0.5em 1em;
+  margin: 0 1em;
+  margin-top: 2em;
+  transition: all 300ms;
+}
+
+.finishButton {
+  background-color: #333;
+  color: whitesmoke;
+}
+
+.finishButton:hover {
+  background-color: #444;
+}
+
+.clearButton {
+  border: 1px solid tomato;
+}
+
+.clearButton:hover {
+  background-color: tomato;
+  color: whitesmoke;
+}
+
+#cartQty {
+  color: #444;
+  font-size: 20px;
+  background-color: whitesmoke;
+  border-radius: 100%;
+  padding: 0 0.2em;
+  font-weight: bold;
+  margin-right: 0.5em;
+}
+
 /* SEARCH INPUT */
 .searcherSection {
   background-color: #444;
