--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,11 +31,18 @@
                 <%})%>
             </ul>
           </div>
-          <i class="fas fa-shopping-basket cartIcon" id="cart"></i>
+          <div class="d-flex align-items-center">
+            <span id="cartQty"></span>
+            <i class="fas fa-shopping-basket cartIcon" id="cart"></i>
+          </div>
           <div id="cartSection" class="cartList hide d-flex flex-column align-items-center p-3">
             <i class="fas fa-times-circle align-self-start" id="close"></i>
             <h3>Carrito</h3>
             <div id="productList"></div>
+            <div class="d-flex">
+              <button class="clearButton" id="clearButton">Vaciar</button>
+              <button class="finishButton" id="finishButton">Finalizar</button>
+            </div>
           </div>
         </div>
     </nav>
