--- a/views/partials/productCard.ejs
+++ b/views/partials/productCard.ejs
@@ -1,11 +1,14 @@
 <div class="card col-xxl-4 m-4" style="width: 18rem;">
-    <div style="background-image: url('<%= product.url_image ? product.url_image : `/assets/no-image.jpg`%>');" class="productImage">
+    <div style="background-image: url('<%= product.url_image ? product.url_image : `/assets/no-image.jpg`%>');" class="productImage d-flex flex-column align-items-start justify-content-between">
         <%if(product.discount>0){%>
             <span class="badge bg-danger discCircle"><%=product.discount%>%</span>
             <%}%>
     </div>
 
     <div class="card-body d-flex flex-column">
+        <%if(isNaN(product.category)){%>
+            <span class="badge bg-secondary align-self-center py-1 px-2"><%=product.category%></span>
+        <%}%>
         <h5 class="card-title text-center productName"><%= product.name%></h5>
          <hr />
         <div class="d-flex justify-content-between">
