--- a/public/styles.css
+++ b/public/styles.css
@@ -202,13 +202,63 @@ nav li > a:hover {
   color: #444;
 }
 
-.messageContainer a {
+.messageContainer a,
+.checkoutContainer a {
   text-decoration: none;
   transition: all 300ms;
 }
 
-.messageContainer a:hover {
+.messageContainer a:hover,
+.checkoutContainer a:hover {
   color: #444;
+}
+
+#message {
+  min-width: 20vw;
+  min-height: 10vh;
+  background-color: #333;
+  position: fixed;
+  bottom: 1em;
+  left: 1em;
+  z-index: 5;
+  box-shadow: -1px -1px 5px #444;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: whitesmoke;
+}
+
+#message div:first-child {
+  padding: 0 0.5em;
+}
+
+#message div:last-child {
+  align-self: flex-start;
+}
+
+#messageBox {
+  margin-left: 0.5em;
+}
+
+.bar {
+  height: 5px;
+  width: 100%;
+  background-color: #ff6a00;
+  animation: statusbar 3s linear;
+}
+
+@keyframes statusbar {
+  0% {
+    width: 100%;
+  }
+  50% {
+    width: 50%;
+  }
+  100% {
+    width: 0%;
+  }
 }
 
 /* FOOTER */
@@ -233,4 +283,18 @@ footer span {
   color: whitesmoke;
   font-size: 30px;
   cursor: pointer;
+}
+
+/* CHEKOUT PAGE */
+
+.checkoutContainer {
+  width: 50%;
+  box-shadow: 2px 2px 7px #444;
+  border-radius: 1em;
+  margin: 0px auto;
+  padding: 2em;
+}
+
+.checkoutImage {
+  width: 200px;
 }
