--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,14 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light px-4 py-3">
-        <div class="container-fluid">
+      <div class="container-fluid">
+          <div id="message" class="hide">
+            <div class="d-flex align-items-center pt-3">
+              <i class="fas fa-exclamation-circle"></i>
+              <span id="messageBox"></span>
+            </div>
+            <div class="bar"></div>
+          </div>
           <a class="navbar-brand" href="/">
             <img src="/assets/logo.png" alt="Logo" class="logo"/>
           </a>
