--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+html * {
+  font-family: "Ubuntu", sans-serif;
+}
+
 body {
   width: 100%;
   min-height: 100vh;
@@ -259,6 +263,15 @@ nav li > a:hover {
   100% {
     width: 0%;
   }
+}
+
+.homeTitle {
+  padding: 1.5em 0;
+  color: #444;
+  font-weight: 700;
+  text-decoration: underline;
+  text-decoration-color: #bd5307;
+  font-size: 2.5em;
 }
 
 /* FOOTER */
