--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/header.ejs') %>
 <main>
-    <div class="container-fluid d-flex justify-content-center flex-wrap">
+    <div class="container-fluid" style="padding: 0 !important;">
         <%selectedCategories.forEach(category=>{%>
             <div>
-                <h2>Ofertas en <%= category%></h2>
-                <div class="container-fluid d-flex justify-content-center flex-wrap">
+                <h2 class="text-center homeTitle">Productos categoría <%= category.toUpperCase()%></h2>
+                <div class="container-fluid d-flex justify-content-center flex-wrap mb-5">
                     <%products.forEach(product=>{%>
                         <%if(product.category===category){%>
                             <%-include('./partials/productCard.ejs', {product})%>
@@ -15,5 +15,4 @@
         <%})%>
     </div>
 </main>
-
 <%- include('./partials/footer.ejs') %>
