--- a/public/styles.css
+++ b/public/styles.css
@@ -207,14 +207,25 @@ nav li > a:hover {
 }
 
 .messageContainer a,
-.checkoutContainer a {
+.checkoutContainer a,
+.error a {
   text-decoration: none;
   transition: all 300ms;
 }
 
 .messageContainer a:hover,
-.checkoutContainer a:hover {
+.checkoutContainer a:hover,
+.error a:hover {
   color: #444;
+}
+
+.problems {
+  width: 50%;
+  margin: 0 auto;
+}
+.problems img {
+  width: 30%;
+  margin-right: 1em;
 }
 
 #message {
@@ -310,4 +321,15 @@ footer span {
 
 .checkoutImage {
   width: 200px;
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.error img {
+  width: 20%;
 }
