--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,1 +1,12 @@
-<h1>error</h1>
+<%- include('./partials/header.ejs') %>
+    <main class="d-flex align-items-center">
+        <div class="problems d-flex align-items-center">
+            <img src="/assets/problem.png" alt="">
+            <div class="d-flex flex-column align-items-center">
+                <h2 class="text-center">Tenemos problemas en estos momentos</h2>
+                <h3 class="text-center">Lamentamos las molestias</h3>
+                <h3 class="text-center">Por favor, intente más tarde</h3>
+            </div>
+        </div>
+    </main>
+<%- include('./partials/footer.ejs') %>
